[#6] 폰트 추가 및 글자 크기, 색상 설정
추후 변경사항 있을 수 있음.

--- a/Android/app/src/main/res/values/themes.xml
+++ b/Android/app/src/main/res/values/themes.xml
@@ -4,7 +4,7 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="android:windowBackground">@android:color/white</item>
-
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="Theme.Memetory" parent="Base.Theme.Memetory" />
