[#6] SignUp UI(닉네임 입력)만 구성

--- a/Android/app/src/main/res/values/dimen.xml
+++ b/Android/app/src/main/res/values/dimen.xml
@@ -8,6 +8,8 @@
 
     <dimen name="text_body1">16sp</dimen>
     <dimen name="text_body2">14sp</dimen>
+    <dimen name="text_body3">12sp</dimen>
+
     <dimen name="text_button">18sp</dimen>
 
 </resources>
