--- a/Android/app/src/main/res/layout/activity_auth.xml
+++ b/Android/app/src/main/res/layout/activity_auth.xml
@@ -6,87 +6,39 @@
     android:layout_height="match_parent"
     tools:context=".presentation.ui.auth.AuthActivity">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/mainLogoImg"
-        android:layout_width="match_parent"
-        android:layout_height="320dp"
-        android:layout_marginBottom="80dp"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/naviHostFragment"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/nav_auth_graph"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <me.relex.circleindicator.CircleIndicator3
+        android:id="@+id/circleIndicator"
+        android:layout_width="0dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="50dp"
+        android:visibility="gone"
+        app:ci_drawable="@drawable/circle_indicator_black"
+        app:ci_drawable_unselected="@drawable/circle_indicator_gray"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/tutorialViewPager"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/circleIndicator"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:srcCompat="@drawable/main_logo"/>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/googleLoginBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/corner_radius_google_12"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/mainLogoImg">
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/googleLogoImg"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="6dp"
-            android:layout_marginVertical="2dp"
-            android:src="@drawable/ic_google_40"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/googleText"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/googleText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/auth_google"
-            android:textAppearance="@style/TextAppearance.App.button"
-            android:layout_marginHorizontal="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/googleLogoImg"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/kakaoLoginBtn"
-        android:layout_width="232dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/corner_radius_kakao_12"
-        android:layout_marginTop="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/googleLoginBtn">
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/kakoLogoImg"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginVertical="12dp"
-            android:layout_marginEnd="25dp"
-            android:src="@drawable/ic_kakao_20"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/KakaoText"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/KakaoText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:text="@string/auth_kakao"
-            android:textAppearance="@style/TextAppearance.App.button"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
