--- a/Android/app/src/main/res/layout/fragment_sign_up.xml
+++ b/Android/app/src/main/res/layout/fragment_sign_up.xml
@@ -22,7 +22,7 @@
         android:id="@+id/nicknameText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.App.body1"
+        android:textAppearance="@style/TextAppearance.App.h4"
         android:text="@string/sign_up_nickname"
         android:layout_marginStart="2dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -32,9 +32,9 @@
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/nicknameEditText"
-        android:layout_width="280dp"
+        android:layout_width="308dp"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.App.body2"
+        android:textAppearance="@style/TextAppearance.App.body1"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/nicknameText"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +44,7 @@
         android:id="@+id/hintText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.App.body3"
+        android:textAppearance="@style/TextAppearance.App.body2"
         android:textColor="@android:color/darker_gray"
         android:text="@string/sign_up_hint"
         app:layout_constraintStart_toStartOf="@id/nicknameText"
