--- a/Android/app/src/main/res/values/colors.xml
+++ b/Android/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="bottom_navi_off">#979797</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray_indicator">#EAEAEA</color>
     <color name="black_indicator">#333333</color>
