[#13] 템플릿 선택 UI

--- a/Android/app/src/main/res/values/dimen.xml
+++ b/Android/app/src/main/res/values/dimen.xml
@@ -12,4 +12,6 @@
 
     <dimen name="text_button">18sp</dimen>
 
+    <!--  item_view 간의 양 옆 여백을 상쇄할 값   -->
+    <dimen name="offsetBetweenPages">50dp</dimen>
 </resources>
