[#25] item_template 디자인 수정

--- a/Android/app/src/main/res/layout/item_template.xml
+++ b/Android/app/src/main/res/layout/item_template.xml
@@ -12,13 +12,11 @@
         android:backgroundTint="@color/subBtn"
         android:layout_marginBottom="20dp">
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/templateNumText"
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/templateImg"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="템플릿1"
-            android:textAppearance="@style/TextAppearance.App.h2"
-            android:gravity="center" />
-
+            android:src="@drawable/snake"
+            android:scaleType="centerCrop"/>
     </LinearLayout>
 </layout>
