--- a/Android/app/src/main/res/layout/fragment_sign_up.xml
+++ b/Android/app/src/main/res/layout/fragment_sign_up.xml
@@ -37,7 +37,7 @@
         android:textAppearance="@style/TextAppearance.App.body1"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/nicknameText"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/nicknameEditText"
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -63,4 +63,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
